[package]
name = "sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2", "json", "macros", "matched-path", "multipart", "original-uri", "tokio", "tower-log", "form", "query"] }
chrono = "0.4.31"
console-subscriber = "0.1.10"
hyper = { version = "0.14.27", features = ["full"] }
mysql = { version = "24.0.0", default-features = false, features = ["minimal", "rustls-tls"] }
serde = { version = "1.0.188", features = ["std", "derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
